--- a/Portfolio/css/styles.css
+++ b/Portfolio/css/styles.css
@@ -1,6 +1,11 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Gupter:wght@400;500;700&display=swap');
+
+
 body{
     margin: 0;
-    font-family: sans-serif;
+    padding: 0;
+    font-family: gupter;
 }
 
 header{
