--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -973,7 +973,7 @@ svg {
   }
   .home .right img {
     display: block;
-    height: 14rem;
+    height: auto;
     max-width: 100%;
     margin-top: -15px;
   }
